--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,9 +19,9 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: ghcr.io/antonov548/podofo.js-docker:main
-          options: --rm -v ${{ github.workspace }}:/podofo.js
+          options: --rm -v ${{ github.workspace }}:/podofo-js
           run: |
             set -e
-            cd podofo.js
+            cd podofo-js
             emcmake cmake -S. -Bbuild -DOPENSSL_CRYPTO_LIBRARY=/usr/local/libx32/libcrypto.a -DOPENSSL_SSL_LIBRARY=/usr/local/libx32/libssl.a -DOPENSSL_INCLUDE_DIR=/usr/local/include/ -DLIBXML2_LIBRARY=/usr/local/lib/libxml2.a -DLIBXML2_INCLUDE_DIR=/usr/local/include/libxml2/ -DPODOFO_BUILD_STATIC=ON
             cmake --build build
