--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
 
+project(podofo.js)
+
 add_subdirectory(podofo)
 
 add_subdirectory(src)
+
+add_subdirectory(tests)
