--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,6 @@ jobs:
           run: |
             set -e
             cd podofo-js
-            emcmake cmake -S. -Bbuild -DOPENSSL_CRYPTO_LIBRARY=/usr/local/libx32/libcrypto.a -DOPENSSL_SSL_LIBRARY=/usr/local/libx32/libssl.a -DOPENSSL_INCLUDE_DIR=/usr/local/include/ -DLIBXML2_LIBRARY=/usr/local/lib/libxml2.a -DLIBXML2_INCLUDE_DIR=/usr/local/include/libxml2/ -DPODOFO_BUILD_STATIC=ON
+            emcmake cmake -S. -Bbuild -DOPENSSL_CRYPTO_LIBRARY=/usr/local/libx32/libcrypto.a -DOPENSSL_SSL_LIBRARY=/usr/local/libx32/libssl.a -DOPENSSL_INCLUDE_DIR=/usr/local/include/ -DLIBXML2_LIBRARY=/usr/local/lib/libxml2.a -DLIBXML2_INCLUDE_DIR=/usr/local/include/libxml2/
             cmake --build build
             cmake --build build --target test
