add ES6 module / npm package.json

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(podofo.js)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 
 include(Misc)
+include(npm)
 
 option(ENABLE_TESTS "Enable tests" ON)
 
@@ -17,6 +18,7 @@ set(PODOFO_BUILD_STATIC ON)
 add_subdirectory(podofo)
 
 add_subdirectory(src)
+add_subdirectory(npm)
 
 if (ENABLE_TESTS)
     add_subdirectory(tests)
