--- a/npm/package.json
+++ b/npm/package.json
@@ -2,7 +2,9 @@
   "name": "podofo.js",
   "version": "0.10.0",
   "module": "podofo.mjs",
-  "files": ["podofo.mjs", "podofo.wasm"],
+  "files": ["podofo.mjs", "podofo.wasm", "podofo.d.ts"],
+  "types": "podofo.d.ts",
+  "readme": "./README.md",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
